# Socioeconomic-Status-and-Health-Information-Seeking-as-Determinants-of-Self-Medication-Practices

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_analysis.py
config/: config.yaml
docs/: codebook.md  methodology.md
src/: __init__.py  calibration.py  config.py  constants.py  data_preprocessing.py  descriptive_analysis.py  descriptives.py  export_excel.py  generate_synthetic_data.py  mediation_analysis.py  model_spec.py  models.py  multiple_imputation.py  ordinal_models.py  preprocess.py  run_pipeline.py  statistical_models.py  subgroup_analysis.py  tables.py  visualization.py
tests/: test_pipeline.py
